--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </div>
         <div data-aos="zoom-in" class="w-full self-end px-4 lg:w-1/2">
           <div class="relative mt-10 lg:right-0 lg:mt-9">
-            <img src="../src/hero.png" alt="" class="relative -z-10 mx-auto max-w-full" />
-            <img src="../src/Element.png" alt=""  class="bottom-0 absolute -z-50"/>
+            <img src="src/hero.png" alt="" class="relative -z-10 mx-auto max-w-full" />
+            <img src="src/Element.png" alt=""  class="bottom-0 absolute -z-50"/>
           </div>
         </div>
       </div>
@@ -67,17 +67,17 @@
         <p class="font-medium text-2xl text-white" data-aos="fade-left">Saya cukup banyak mempunyai skill di bidang teknologi seperti :</p>
       </div>
       <div class="w-1/4 px-4 lg:w-1/2 flex space-x-5 mb-4" data-aos="zoom-in">
-        <img src="./svg/html-5.png" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900" id="item1">
-        <img src="./svg/css-3.png" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900"/>
-        <img src="./svg/js.png" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900">
-        <img src="./svg/tailwind.png" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900">
+        <img src="svg/html-5.png" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900" id="item1">
+        <img src="svg/css-3.png" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900"/>
+        <img src="svg/js.png" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900">
+        <img src="svg/tailwind.png" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900">
       </div>
       </div>
       <div class="w-1/4 px-4 lg:w-1/2 flex space-x-5" data-aos="zoom-in">
-        <img src="./svg/office.png" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900">
-        <img src="./svg/icons8-canva.svg" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900"/>
-        <img src="./svg/icons8-alight-motion.svg" alt=""class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900">
-        <img src="./svg/icons8-coreldraw-480.svg" alt=""class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900">
+        <img src="svg/office.png" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900">
+        <img src="svg/icons8-canva.svg" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900"/>
+        <img src="svg/icons8-alight-motion.svg" alt=""class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900">
+        <img src="svg/icons8-coreldraw-480.svg" alt=""class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900">
       </div>
     </div>
   </div>
@@ -94,15 +94,15 @@
           <h3 class="font-bold text-white text-xl lg:text-2xl">Logo</h3>
         </div>
         <div class="flex w-1/3 px-4 lg:w-1/2 space-x-5 mb-4" data-aos="zoom-in">
-          <img src="./gallery/logo1.png" alt=""class="backdrop-blur-sm bg-white/5 p-1 border hover:bg-white">
-          <img src="./gallery/logo2.png" alt=""class="backdrop-blur-sm bg-white/5 p-1 border hover:bg-white">
-          <img src="./gallery/logo3.png" alt=""class="backdrop-blur-sm bg-white/5 p-1 border hover:bg-white">
+          <img src="gallery/logo1.png" alt=""class="backdrop-blur-sm bg-white/5 p-1 border hover:bg-white">
+          <img src="gallery/logo2.png" alt=""class="backdrop-blur-sm bg-white/5 p-1 border hover:bg-white">
+          <img src="gallery/logo3.png" alt=""class="backdrop-blur-sm bg-white/5 p-1 border hover:bg-white">
         </div>
         <div class="w-full px-4 mb-4 lg:w-1/2" data-aos="fade-right">
           <h2 class="text-white text-xl lg:text-2xl font-bols">Poster</h2>
         </div>
         <div class="flex w-full px-4 lg:w-1/2" data-aos="zoom-in">
-          <img src="./gallery/poster.jpeg" alt="">
+          <img src="gallery/poster.jpeg" alt="">
         </div>
       </div>
     </div>
@@ -120,10 +120,10 @@
           <p class="text-white text-xl lg:text-2xl" data-aos="fade-left">Yuk berteman dengan saya dan sharing - sharing pengalaman dengan saya dengan cara menghubungi sosial media saya :</p>
         </div>
         <div class="w-9/12 flex px-4 mb-4 lg:w-1/2 space-x-5" data-aos="zoom-in">
-          <a href="https://wa.me/6285179699638"><img src="./icons svg/icons8-whatsapp.svg" alt="" class="hover:scale-110 ease-in-out duration-300"></a>
-          <a href="https://www.instagram.com/muhammad_fio_07?igsh=MTljMXMwYmc2anBhYg%3D%3D&utm_source=qr"><img src="./icons svg/icons8-instagram.svg" alt="" class="hover:scale-110 ease-in-out duration-300"></a>
-          <a href="https://www.facebook.com/share/1LPiYsT31w/?mibextid=LQQJ4d"><img src="./icons svg/icons8-facebook.svg" alt="" class="hover:scale-110 ease-in-out duration-300"></a>
-          <a href="https://www.linkedin.com/in/muhammad-fio-fathur-rahman-b50b45307?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><img src="../icons svg/icons8-linkedin.svg" alt="" class="hover:scale-110 ease-in-out duration-300"></a>
+          <a href="https://wa.me/6285179699638"><img src="icons svg/icons8-whatsapp.svg" alt="" class="hover:scale-110 ease-in-out duration-300"></a>
+          <a href="https://www.instagram.com/muhammad_fio_07?igsh=MTljMXMwYmc2anBhYg%3D%3D&utm_source=qr"><img src="icons svg/icons8-instagram.svg" alt="" class="hover:scale-110 ease-in-out duration-300"></a>
+          <a href="https://www.facebook.com/share/1LPiYsT31w/?mibextid=LQQJ4d"><img src="icons svg/icons8-facebook.svg" alt="" class="hover:scale-110 ease-in-out duration-300"></a>
+          <a href="https://www.linkedin.com/in/muhammad-fio-fathur-rahman-b50b45307?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><img src="icons svg/icons8-linkedin.svg" alt="" class="hover:scale-110 ease-in-out duration-300"></a>
         </div>
       </div>
     </div>
