--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-<body class="bg-gray-900">
+<body class="bg-gray-900" id="body">
   <header class="px-5 py-5 z-50 w-full fixed backdrop-blur-sm bg-white/5">
     <div class="container flex justify-between">
       <h1 class="font-bold text-2xl text-emerald-600">Fio Fathur</h1>
@@ -66,14 +66,14 @@
         <h2 class="text-emerald-600 font-bold text-2xl lg:text-4xl" data-aos="fade-right">Skills</h2>
         <p class="font-medium text-2xl text-white" data-aos="fade-left">Saya cukup banyak mempunyai skill di bidang teknologi seperti :</p>
       </div>
-      <div class="w-1/4 px-4 lg:w-1/2 flex space-x-5 mb-4" data-aos="zoom-in">
+      <div class="max-w-sm grid grid-cols-4 gap-4 mx-auto max-h-sm px-4 lg:w-1/2 mb-4" data-aos="zoom-in">
         <img src="svg/html-5.png" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900" id="item1">
         <img src="svg/css-3.png" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900"/>
         <img src="svg/js.png" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900">
-        <img src="svg/tailwind.png" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900">
+        <img src="svg/tailwind.png" alt="" class="backdrop-blur-sm bg-white/30 py-3.5 border hover:bg-gray-900 ">
       </div>
       </div>
-      <div class="w-1/4 px-4 lg:w-1/2 flex space-x-5" data-aos="zoom-in">
+      <div class="max-w-sm grid grid-cols-4 px-4  gap-4 mx-auto lg:w-1/2" data-aos="zoom-in">
         <img src="svg/office.png" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900">
         <img src="svg/icons8-canva.svg" alt="" class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900"/>
         <img src="svg/icons8-alight-motion.svg" alt=""class="backdrop-blur-sm bg-white/30 p-1 border hover:bg-gray-900">
@@ -89,11 +89,11 @@
   <section class="pt-32 pb-36" id="gallery">
     <div class="container" id="">
       <div class="flex flex-wrap">
-        <div class="w-full px-4 mb-4 lg:w-1/2" data-aos="fade-right">
+        <div class="w-full px-4 mb-4lg:w-1/2" data-aos="fade-right">
           <h2 class="font-bold text-2xl lg:text-4xl text-emerald-600">Berikut beberapa proyek karya dari saya</h2>
           <h3 class="font-bold text-white text-xl lg:text-2xl">Logo</h3>
         </div>
-        <div class="flex w-1/3 px-4 lg:w-1/2 space-x-5 mb-4" data-aos="zoom-in">
+        <div class="grid grid-cols-3 px-4 max-w-sm mx-auto gap-4 lg:w-1/2 mb-4" data-aos="zoom-in">
           <img src="gallery/logo1.png" alt=""class="backdrop-blur-sm bg-white/5 p-1 border hover:bg-white">
           <img src="gallery/logo2.png" alt=""class="backdrop-blur-sm bg-white/5 p-1 border hover:bg-white">
           <img src="gallery/logo3.png" alt=""class="backdrop-blur-sm bg-white/5 p-1 border hover:bg-white">
