--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <h2 data-aos="fade-right" class="text-white text-2xl lg:text-4xl">Saya <span class="text-emerald-600">Muhammad Fio Fathurrahman</span></h2>
           <h3 data-aos="fade-right" class="bg-emerald-600 w-[200px] py-1 text-4xl text-white ">Fresh Graduate</h3>
           <div class="gap-10 flex mt-2">
-            <a href="#" data-aos="fade-right" class="bg-emerald-600 px-6 py-1 text-white text-center lg:text-2xl text-center hover:scale-110 duration-300 ease-in-out hover:bg-emerald-900">Download Cv</a>
+            <a href="https://drive.google.com/file/d/1sLwoUWaRxwIluJ1JavwrwMBZN73A1bMT/view?usp=drivesdk" data-aos="fade-right" class="bg-emerald-600 px-6 py-1 text-white text-center lg:text-2xl text-center hover:scale-110 duration-300 ease-in-out hover:bg-emerald-900">Download Cv</a>
             <a href="#about" data-aos="fade-right" class="bg-emerald-600 px-6 py-1 text-white text-center lg:text-2xl text-center">Tentang Saya</a>
           </div>
         </div>
